# computational-physics-lab

./: .HowToGit.txt.swp  .gitignore  .txt  CMakeLists.txt  Gcc flags copy paste  HowToGit.txt  HowToGit.txt.save  LICENSE  Latex.tex  README.md  setup_all_directories.sh  setup_directories.sh  setup_directory.sh
Lecture14/: Es14_1.c
Lezione 11/: Es11_1.c
Lezione1/: Approssimazione_Esponenziali  Approssimazione_Esponenziali.c  Approssimazione_Esponenziali.cpp  Confronto convergenze  Gnuplot1_1.gp  Gnuplot1_1_latex.gp
Lezione1/Es1_1/: CMakeLists.txt  es1_1_exponential_truncation_error  exponential_approximation  exponential_approximation.c
Lezione1/Es1_1/conf/: plot1.cfg
Lezione10/: Es10_1.c
Lezione10/Es10_1/: CMakeLists.txt  Es10_1  Es10_1.c
Lezione11/: valgrind-out.txt
Lezione12/: Es12_2.c  Es12_3.c  Es12_4.c
Lezione14/Es14_1/: CMakeLists.txt  Es14_1  Es14_1.c
Lezione15/: Es15_1.c
Lezione15/Es15_2/: CMakeLists.txt  Es15_2  Es15_2.c
Lezione16/: Es16_1.c
Lezione16/Es16_1/: CMakeLists.txt  Es16_1  Es16_1.c
Lezione17/: Es17_1.c  Es17_2.c
Lezione17/Es17_1/: CMakeLists.txt  Es17_1  Es17_1.c
Lezione17/Es17_1/conf/: trap_rule_plot  trap_rule_plot.cfg
Lezione17/Es17_2/: CMakeLists.txt  Es17_2
Lezione2/: Es2_1cp.c  Gnuplot2_1.gp  TestCompiler.c
Lezione2/Es2_1/: CMakeLists.txt  Es2_1  baselfloat  baselfloat.c
Lezione2/Es2_2/: CMakeLists.txt  Es2_2  Es2_2.c
Lezione20/Es20_1/: CMakeLists.txt  improper_integrals.c
Lezione21/Es21_1/: CMakeLists.txt  feuler_first_order  feuler_first_order.c
Lezione21/Es21_1/conf/: my_plot.gp
Lezione21/Es21_1/plot/: euler_test1
Lezione21/Es21_1/script/: euler_test1.gp
Lezione21/Es21_2/: CMakeLists.txt  feuler_second_order  feuler_second_order.c
Lezione22/Es22_3/: CMakeLists.txt  lotka_volterra
Lezione23/Es23_1/: CMakeLists.txt  schroedinger_gaussian1
Lezione3/: DoubleUtilities.c  Es3_1  Es3_1.c  Es3_1double  Es3_1float  FloatUtilities.c  test  test.c
Lezione3/Es3_1float/: CMakeLists.txt  Es3_1float  Es3_1float.c  variancefloat  variancefloat.c
Lezione4/: .DoubleUtilities.c.swp  DoubleUtilities.c  Es4_1  Es4_1.c  startmatrix.txt
Lezione4/Es4Opt/: CMakeLists.txt  Es4Opt  Es4Opt.c
Lezione4/Es4_1/: CMakeLists.txt  Es4_1  Es4_1.c
Lezione5/: Es5_1.c
Lezione6/: Es6_1.c
Lezione6/Es6_1/: CMakeLists.txt  Es6_1
Lezione7/: Es7_1.c
Lezione7/Es7_1/: CMakeLists.txt  Es7_1
Lezione8/: Es8_1.c  Es8_2.c  Es8_3.c  Es8_3.gp  test.gp
Lezione8/Es8_2/: CMakeLists.txt  Es8_2  Es8_2.c
Lezione9/: Es9_1.c
Lezione9/Es9_2/: CMakeLists.txt  Es9_2
LezioneTest/: test.c  test_script.gp
LezioneTest/es_test/: CMakeLists.txt  test.c  test1
LezioneTest/es_test/conf/: test.cfg
LezioneTest/test/: CMakeLists.txt  test  test.c
programs/: CMakeLists.txt
programs/error_analysis/Es1_1/: CMakeLists.txt  exponential_approximation  exponential_approximation.c
programs/error_analysis/Es2_1/: CMakeLists.txt  baselfloat.c
programs/error_analysis/Es2_2/: CMakeLists.txt  sequence
programs/error_analysis/Es2_2double/: CMakeLists.txt  baseldouble  baseldouble.c
programs/error_analysis/Es3_1double/: CMakeLists.txt  Es3_1double
programs/error_analysis/Es3_1float/: CMakeLists.txt  variancefloat.c
programs/error_analysis/es1_0_1_exponential_approximation/: CMakeLists.txt  exponential_approximation
programs/error_analysis/es1_2_1double_basel/: CMakeLists.txt  baseldouble
programs/error_analysis/es1_2_1float_basel/: CMakeLists.txt  baselfloat
programs/integration/Es17_1/: CMakeLists.txt  Es17_1  Es17_1.c
programs/integration/Es17_2/: CMakeLists.txt  Es17_2  Es17_2.c
programs/integration/Es18_1/: CMakeLists.txt  gauss_legendre_weights  gauss_legendre_weights.c
programs/integration/Es19_1/: CMakeLists.txt  gauss_legendre_integrals
programs/integration/Es19_1/conf/: gauss_legendre.cfg
programs/integration/Es20_1/: CMakeLists.txt  improper_integrals
programs/interpolation/: CMakeLists.txt
programs/interpolation/Es10_1/: CMakeLists.txt  Es10_1
programs/interpolation/Es11_1/: CMakeLists.txt  Es11_1
programs/interpolation/Es12_1/: CMakeLists.txt  Es12_1
programs/interpolation/Es12_2/: CMakeLists.txt  Es12_2
programs/interpolation/Es12_3/: CMakeLists.txt  Es12_3
programs/interpolation/Es12_4/: CMakeLists.txt  Es12_4
programs/linear_systems/Es4Opt/: CMakeLists.txt
programs/linear_systems/Es4_1/: CMakeLists.txt  Es4_1  Es4_1.c
programs/linear_systems/Es5_1/: CMakeLists.txt  Es5_1  samplematrix2.txt
programs/linear_systems/Es6_1/: CMakeLists.txt  Es6_1  Es6_1.c  samplematrix3.txt
programs/linear_systems/Es7_1/: CMakeLists.txt  Es7_1  Es7_1.c
programs/linear_systems/Es8_1/: CMakeLists.txt  Es8_1  Es8_1.c
programs/linear_systems/Es8_2/: CMakeLists.txt  Es8_2  Es8_2.c
programs/linear_systems/Es8_3/: CMakeLists.txt  Es8_3
programs/linear_systems/Es9_1/: CMakeLists.txt  Es9_1
programs/linear_systems/Es9_2/: CMakeLists.txt  Es9_2  Es9_2.c
programs/linear_systems/es2_1_1_forw_backsubstitution/: CMakeLists.txt  Es4_1  Es4_1.c  samplematrix1back.txt
programs/linear_systems/es2_1_1lapack_forw_backsubstitution/: CMakeLists.txt  Es4_1lapack  Es4_1lapack.c  samplematrix1.txt  samplematrix2.txt  samplematrix2back.txt
programs/linear_systems/es2_3_1_linsystems_conditioning/: CMakeLists.txt  Es7_1  lin_sys_conditioning  lin_sys_conditioning.c
programs/linear_systems/es_2_2_lup_decomposition/: CMakeLists.txt  Es6_1  lup_decomposition  lup_decomposition.c
programs/ode/Es21_1/: CMakeLists.txt  feuler_first_order
programs/ode/Es21_2/: CMakeLists.txt  feuler_second_order
programs/ode/Es22_1/: CMakeLists.txt  runge_kutta_test  runge_kutta_test.c
programs/ode/Es22_2/: CMakeLists.txt  rk_nonlinear
programs/ode/Es22_3/: CMakeLists.txt  lotka_volterra  lotka_volterra.c
programs/ode/Es23_1/: CMakeLists.txt  schroedinger_gaussian1  schroedinger_gaussian1.c
programs/root_finding/Es14_1/: CMakeLists.txt  Es14_1
programs/root_finding/Es15_1/: CMakeLists.txt  Es15_1
programs/root_finding/Es15_2/: CMakeLists.txt  Es15_2  Es15_2.c
programs/root_finding/Es16_1/: CMakeLists.txt  Es16_1
(+121 files in other folders)
