set(EXERCISE_SOURCES Es2_1.c)
add_executable(Es2_1 ${EXERCISE_SOURCES})
target_link_libraries(Es2_1 PRIVATE cp_library m)
target_include_directories(Es2_1 PRIVATE ${CMAKE_SOURCE_DIR}/Libraries/header)
set_target_properties(Es2_1 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/Lezione2/Es2_1")
