set(EXERCISE_SOURCES sequence.c)
add_executable(sequence ${EXERCISE_SOURCES})
target_link_libraries(sequence PRIVATE cp_library m)
target_include_directories(sequence PRIVATE ${CMAKE_SOURCE_DIR}/Libraries/header)
set_target_properties(sequence PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/Lezione2/Es2_2")
