set(EXERCISE_SOURCES improper_integrals.c)
add_executable(improper_integrals ${EXERCISE_SOURCES})
target_link_libraries(improper_integrals PRIVATE cp_library m)
target_include_directories(improper_integrals PRIVATE ${CMAKE_SOURCE_DIR}/Libraries/header)
set_target_properties(improper_integrals PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/Lezione20/Es20_1")
