set(EXERCISE_SOURCES variancefloat.c)
add_executable(variancefloat ${EXERCISE_SOURCES})
target_link_libraries(variancefloat PRIVATE cp_library m)
target_include_directories(variancefloat PRIVATE ${CMAKE_SOURCE_DIR}/Libraries/header)
set_target_properties(variancefloat PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/Lezione3/Es3_1float")
