set(EXERCISE_SOURCES test1.c)
add_executable(test1 ${EXERCISE_SOURCES})
target_link_libraries(test1 PRIVATE cp_library m)
target_include_directories(test1 PRIVATE ${CMAKE_SOURCE_DIR}/Libraries/header)
set_target_properties(test1 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/LezioneTest/es_test")
