set(EXERCISE_SOURCES test.c)
add_executable(test ${EXERCISE_SOURCES})
target_link_libraries(test PRIVATE cp_library m)
target_include_directories(test PRIVATE ${CMAKE_SOURCE_DIR}/Libraries/header)
set_target_properties(test PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/LezioneTest/test")
