set(EXERCISE_SOURCES baselfloat.c)
add_executable(baselfloat ${EXERCISE_SOURCES})
target_link_libraries(baselfloat PRIVATE cp_library m)
target_include_directories(baselfloat PRIVATE ${CMAKE_SOURCE_DIR}/Libraries/header)
set_target_properties(baselfloat PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/Lezione2/Es2_1")
